# bot

./: .gitignore  api.py  app.py  controller.py  esp32.yaml  esphome.yaml  get_ports.py  main.py  notes.txt  pyproject.toml  recording.json  reference.py  replay.json  requirements.txt  servo_calibration.json  servo_controller.py  setup.sh
api/: __init__.py  __main__.py  server.py
bot/: package-lock.json  package.json
bot/public/model/: arm.urdf
bot/public/model/meshes/: 1-clamp.stl  1-servo.stl  2-holder.stl  4-clamp.stl  4-holder.stl  5-clamp.stl  5-holder.stl  6-clamp.stl  6-holder.stl  6-servo.stl
bot/src/: App.tsx
bot/src/components/: RobotControls.tsx  URDFViewer.tsx
bot/src/services/: ServoAPI.ts
core/: servos.py  test.py
core/data/: calibration copy.json  calibration.json  config.json
scripts/: calibrate.py  center.py  enable_torque.py  get_ports.py  get_pos.py  playback.py  record.py  server.py
servo_controller/: __init__.py  config.json  controller.py  servo_calibration.json
static/js/: robot.js
templates/: index.html
ui/: __init__.py  package-lock.json  package.json  server.py  tailwind.config.js  vite.config.ts
ui/public/model/meshes/: 1-holder.stl  2-clamp.stl  2-servo.stl  3-clamp.stl  3-holder.stl  3-servo.stl  4-servo.stl  5-servo.stl  7-horn.stl
ui/src/: App.tsx  index.css
ui/src/components/: CalibrationUI.tsx  RobotControls.tsx  URDFViewer.tsx
ui/src/services/: ServoAPI.ts
ui/static/js/: robot.js
ui/templates/: index.html
